--- a/translations/messages.lt.po
+++ b/translations/messages.lt.po
@@ -5063,7 +5063,7 @@ msgstr "Užbaigti sesijo sukūrimą"
 msgid "Videoconference RTMTP protocol port"
 msgstr "Videoconference RTMTP protocol port"
 
-msgid "Session name already exists"
+msgid "Session title already exists"
 msgstr "Sesijos vardas egzistuoja"
 
 msgid "No classes have been created"
@@ -17402,13 +17402,13 @@ msgstr ""
 msgid "My statistics"
 msgstr ""
 
-msgid "Exercises available"
+msgid "Tests available"
 msgstr ""
 
 msgid "Exercises taken"
 msgstr ""
 
-msgid "Average exercise result"
+msgid "Average test result"
 msgstr ""
 
 msgid "Learning path progress"
@@ -18362,7 +18362,7 @@ msgstr ""
 msgid "Online link to certificate"
 msgstr ""
 
-msgid "New exercises"
+msgid "New tests"
 msgstr ""
 
 msgid "My average"
