--- a/translations/messages.pt.po
+++ b/translations/messages.pt.po
@@ -5069,7 +5069,7 @@ msgstr "Concluir a criação da sessão"
 msgid "Videoconference RTMTP protocol port"
 msgstr "Porta de protocolo RTMTP da videoconferência"
 
-msgid "Session name already exists"
+msgid "Session title already exists"
 msgstr "O nome da sessão já existe"
 
 msgid "No classes have been created"
@@ -17408,13 +17408,13 @@ msgstr ""
 msgid "My statistics"
 msgstr ""
 
-msgid "Exercises available"
+msgid "Tests available"
 msgstr "Exercícios disponíveis"
 
 msgid "Exercises taken"
 msgstr "Exercícios tentados"
 
-msgid "Average exercise result"
+msgid "Average test result"
 msgstr "Média de resultados dos exercícios"
 
 msgid "Learning path progress"
@@ -18368,7 +18368,7 @@ msgstr ""
 msgid "Online link to certificate"
 msgstr ""
 
-msgid "New exercises"
+msgid "New tests"
 msgstr "Novo exercício"
 
 msgid "My average"
