--- a/translations/messages.bg.po
+++ b/translations/messages.bg.po
@@ -5061,7 +5061,7 @@ msgstr "Край на създаването на сесията"
 msgid "Videoconference RTMTP protocol port"
 msgstr "Порт на протокола за видеоконференции"
 
-msgid "Session name already exists"
+msgid "Session title already exists"
 msgstr "Името на сесията вече съществува."
 
 msgid "No classes have been created"
@@ -17400,13 +17400,13 @@ msgstr ""
 msgid "My statistics"
 msgstr ""
 
-msgid "Exercises available"
+msgid "Tests available"
 msgstr ""
 
 msgid "Exercises taken"
 msgstr ""
 
-msgid "Average exercise result"
+msgid "Average test result"
 msgstr ""
 
 msgid "Learning path progress"
@@ -18360,7 +18360,7 @@ msgstr ""
 msgid "Online link to certificate"
 msgstr ""
 
-msgid "New exercises"
+msgid "New tests"
 msgstr ""
 
 msgid "My average"
