--- a/translations/messages.zh_TW.po
+++ b/translations/messages.zh_TW.po
@@ -5061,7 +5061,7 @@ msgstr "完成創建學期單元"
 msgid "Videoconference RTMTP protocol port"
 msgstr "視像會議 RTMTP 協定埠"
 
-msgid "Session name already exists"
+msgid "Session title already exists"
 msgstr "學期單元名稱快將出現"
 
 msgid "No classes have been created"
@@ -17400,13 +17400,13 @@ msgstr ""
 msgid "My statistics"
 msgstr ""
 
-msgid "Exercises available"
+msgid "Tests available"
 msgstr ""
 
 msgid "Exercises taken"
 msgstr ""
 
-msgid "Average exercise result"
+msgid "Average test result"
 msgstr ""
 
 msgid "Learning path progress"
@@ -18360,7 +18360,7 @@ msgstr ""
 msgid "Online link to certificate"
 msgstr ""
 
-msgid "New exercises"
+msgid "New tests"
 msgstr ""
 
 msgid "My average"
